--- a/css/payroll_style.css
+++ b/css/payroll_style.css
@@ -139,18 +139,18 @@ select {
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
-    background: transparent;
     border: none;
     font-weight: 400;
     min-width: 140px;
     padding: 7px 7px;
-    border: 1px solid #707070;
     cursor: pointer;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
 }
 
 .submitButton {
     border: 1;
-    background-color: #f5f5f5;
     margin-right: 30px;
 }
 
